--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1695,8 +1695,10 @@ $kbd-bg:                            $gray-900 !default;
 $pre-color:                         null !default;
 
 $magic-heights: (
+  "12": 12px,
   "25": 25px,
   "42": 42px,
+  "54": 54px,
   "59": 59px,
   "100": 100px,
   "110": 110px,
