--- a/assets/styles/components/_components.scss
+++ b/assets/styles/components/_components.scss
@@ -2,3 +2,6 @@
 @import 'img.scss';
 @import 'card.scss';
 @import 'icon.scss';
+@import 'scrollbar.scss';
+@import 'rounded.scss';
+@import 'line.scss';
