[ edit ] 站點群組顏色

--- a/assets/styles/_utilities.scss
+++ b/assets/styles/_utilities.scss
@@ -61,6 +61,7 @@ $utilities: map-merge(
       property: height,
       class: vh,
       values: (
+        71:  71vh,
         80:  80vh,
         85:  85vh,
         100: 100vh,
