[ edit ] footer 底色修正

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -37,7 +37,7 @@ $grays: (
 
 // scss-docs-start color-variables
 // $blue:    #0d6efd !default;
-$blue:    #330658 ;
+$blue:    #333D71D1 ;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #d63384 !default;
