[ edit ] 手機版資訊

--- a/assets/styles/_utilities.scss
+++ b/assets/styles/_utilities.scss
@@ -60,6 +60,7 @@ $utilities: map-merge(
     "viewport-height": (
       property: height,
       class: vh,
+      responsive: true,
       values: (
         71:  71vh,
         80:  80vh,
